bugfix login route not showing and signup function not updating user

--- a/angular-front/src/app/pages/auth/auth.component.scss
+++ b/angular-front/src/app/pages/auth/auth.component.scss
@@ -58,7 +58,7 @@
 
         input { height: 2.75rem; }
         label {  color: colors.$NEUTRAL_COLOR }
-        a { text-decoration: none; }
+        a { color: colors.$MAIN_COLOR; cursor: pointer }
         
         .login-forgot-password-text  {text-align: end;}
         .login-continue-with-text, .login-register-text {text-align: center;}
